# VCP-Renderer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  prj.conf
docs/html/: annotated.html  bluetoothManager_8c_source.html  bluetoothManager_8h.html  bluetoothManager_8h_source.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  index.html  main_8c.html  main_8c_source.html  menudata.js  peripherals_8c_source.html  peripherals_8h.html  peripherals_8h_source.html  structvolumeState.html  volumeControlService_8c.html  volumeControlService_8c_source.html  volumeControlService_8h.html  volumeControlService_8h_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  (+1 more)
src/: VolumeControlService.c  VolumeControlService.h  bluetoothManager.c  bluetoothManager.h  main.c  peripherals.c  peripherals.h
